fabrik/internal/engine/testdata/templates_collide.txt
A section directory provided by two template trees is an error naming
both declarations.
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/templates v0.0.0

replace github.com/gofabrik/fabrik/templates => TEMPLATEDIR
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- shared/templates.go --
package shared

import "embed"

//fabrik:templates
//go:embed all:templates
var Templates embed.FS
-- shared/templates/_default/_layout.html --
<html>{{ block "content" . }}{{ end }}</html>
-- shared/templates/web/index.html --
{{ define "content" }}from shared{{ end }}
-- web/templates.go --
package web

import "embed"

//fabrik:templates
//go:embed all:templates
var Templates embed.FS
-- web/templates/web/home.html --
{{ define "content" }}from web{{ end }}
-- web/web.go --
package web

import (
	"net/http"

	"github.com/gofabrik/fabrik/templates"
)

type Handlers struct {
	Templates *templates.Set
}

//fabrik:http GET /
func (h *Handlers) Home(w http.ResponseWriter, r *http.Request) {
	h.Templates.Render(w, "web/home", nil)
}
-- want/diags --
error: web/templates.go:5:1: template section "web" is already provided by the tree at $WORK/shared/templates.go:5:1
  help: each section directory belongs to exactly one tree
